--- a/i3/config
+++ b/i3/config
@@ -1,5 +1,5 @@
 
-font xft:Inconsolata 12
+font xft:Inconsolata 11
 # font pango:DejaVu Sans 11
 
 set $mod Mod4
@@ -14,10 +14,11 @@ hide_edge_borders both
 # use neither window title nor border
 bindsym $mod+u border toggle
 
-exec --no-startup-id ~/.fehbg
-exec --no-startup-id i3-sensible-terminal -e cmus
-exec --no-startup-id "python /home/patrick/.config/playerctl/playerctl-listen.py &"
-workspace 10 output DP-2
+# exec --no-startup-id ~/.fehbg
+exec --no-startup-id python /home/patrick/.config/i3blocks/scripts/playerctl-listen.py
+exec --no-startup-id /home/patrick/.screenlayout/upper-right.sh
+# workspace 1 output eDP-2
+# workspace 8 output DP-2-2
 
 # kill focused window
 bindsym $mod+q kill
@@ -35,8 +36,8 @@ bindsym $mod+period exec "pamixer -i 5 ; pkill -RTMIN+10 i3blocks"
 bindsym $mod+comma  exec "pamixer -d 5 ; pkill -RTMIN+10 i3blocks"
 bindsym $mod+m      exec "pamixer -t   ; pkill -RTMIN+10 i3blocks"
 
-bindsym XF86MonBrightnessUp   exec "xbacklight -inc 5 ; pkill -RTMIN+10 i3blocks"
-bindsym XF86MonBrightnessDown exec "xbacklight -dec 5 ; pkill -RTMIN+10 i3blocks"
+bindsym XF86MonBrightnessUp   exec "brightnessctl s 5%+ ; pkill -RTMIN+10 i3blocks"
+bindsym XF86MonBrightnessDown exec "brightnessctl s 5%- ; pkill -RTMIN+10 i3blocks"
 
 bindsym Mod5+dead_tilde     exec "playerctl next"
 bindsym Mod5+dead_diaeresis exec "playerctl previous"
@@ -125,6 +126,18 @@ bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
+# switch to workspace
+bindsym Mod5+1 workspace 1
+bindsym Mod5+2 workspace 2
+bindsym Mod5+3 workspace 3
+bindsym Mod5+4 workspace 4
+bindsym Mod5+5 workspace 5
+bindsym Mod5+6 workspace 6
+bindsym Mod5+7 workspace 7
+bindsym Mod5+8 workspace 8
+bindsym Mod5+9 workspace 9
+bindsym Mod5+0 workspace 10
+
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
@@ -145,8 +158,8 @@ bindsym $mod+Shift+r restart
 
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec i3-msg exit
-bindsym $mod+Mod1+l exec "i3lock -f -i '/media/pictures/dl/Gateway to Heaven.jpg'"
-bindsym $mod+Shift+BackSpace exec "i3lock -f -i '/media/pictures/dl/Gateway to Heaven.jpg' && systemctl suspend"
+bindsym $mod+Mod1+l exec "i3lock -c 0d1926 -f -i '/media/pictures/dl/Gateway to Heaven.jpg'"
+bindsym $mod+Shift+BackSpace exec "i3lock -c 0d1926 -f -i '/media/pictures/dl/Gateway to Heaven.jpg' && systemctl suspend"
 bindsym $mod+Shift+Escape exec systemctl poweroff
 bindsym $mod+Shift+Delete exec systemctl reboot --firmware-setup
 
@@ -173,16 +186,17 @@ bindsym $mod+r mode "resize"
 bindsym $mod+Mod1+Return exec i3-sensible-terminal
 bindsym $mod+Mod1+r exec i3-sensible-terminal -e ranger
 bindsym $mod+Mod1+c exec --no-startup-id "urxvt -e cmus ; pkill -RTMIN+12 i3blocks"
-bindsym $mod+Mod1+f exec firefox-nightly
+bindsym $mod+Mod1+p exec firefox-nightly -P default
+bindsym $mod+Mod1+f exec firefox-nightly -P work
 bindsym $mod+Mod1+g exec google-chrome-stable
 bindsym $mod+Mod1+t exec thunderbird-nightly
 bindsym $mod+Mod1+s exec "spotify ; pkill -RTMIN+12 i3blocks"
 bindsym $mod+Mod1+k exec keepassx2
 bindsym $mod+Mod1+v exec vlc
 
-assign [class="^URxvt$" title="cmus"] 8
-assign [class="^Lollypop$"] 8
-for_window [class="Spotify"] move to workspace 8
+# assign [class="^URxvt$" title="cmus"] 1
+# assign [class="^Lollypop$"] 1
+# for_window [class="Spotify"] move to workspace 1
 
 # no_focus [class="^Mathematica$"]
 # no_focus [class="^Vlc$"]
@@ -199,12 +213,13 @@ client.unfocused        #333333 #333333 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
 
 bar {
+    output primary
     status_command i3blocks
-    tray_output none
+    # tray_output none
     # verbose yes
 
     colors {
-        background #000000
+        background #151515
         statusline #dddddd
         separator  #666666
         focused_workspace  #0088CC #0088CC #ffffff
