--- a/i3/config
+++ b/i3/config
@@ -1,6 +1,6 @@
 
-font xft:Inconsolata 11
-# font pango:DejaVu Sans 11
+font xft:Inconsolata 12
+# font pango:DejaVu Sans 14
 
 set $mod Mod4
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -24,8 +24,8 @@ exec --no-startup-id /home/patrick/.screenlayout/upper-right.sh
 bindsym $mod+q kill
 bindsym $mod+Shift+q kill
 
-bindsym Print --release exec scrot -s -e 'mv $f ~/pictures/shots/'
-bindsym Shift+Print --release exec scrot -u -e 'mv $f ~/pictures/shots/'
+bindsym Print --release exec scrot -s -e 'mv $f ~/Pictures/shots/'
+bindsym Shift+Print --release exec scrot -u -e 'mv $f ~/Pictures/shots/'
 
 # pulse audio mixer
 bindsym Mod5+periodcentered exec "pamixer -i 5 ; pkill -RTMIN+10 i3blocks"
@@ -188,10 +188,11 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 bindsym $mod+Mod1+Return exec i3-sensible-terminal
+bindsym $mod+Mod1+Shift+Return exec urxvt -e ssh pc1.patchin.uxb.ciscolabs.com -Y
 bindsym $mod+Mod1+r exec i3-sensible-terminal -e ranger
 bindsym $mod+Mod1+c exec --no-startup-id "urxvt -e cmus ; pkill -RTMIN+12 i3blocks"
-bindsym $mod+Mod1+p exec firefox-nightly -P default
-bindsym $mod+Mod1+f exec firefox-nightly -P work
+#bindsym $mod+Mod1+p exec firefox -P default
+bindsym $mod+Mod1+f exec firefox
 bindsym $mod+Mod1+g exec google-chrome-stable
 bindsym $mod+Mod1+t exec thunderbird-nightly
 bindsym $mod+Mod1+s exec "spotify ; pkill -RTMIN+12 i3blocks"
@@ -217,7 +218,7 @@ client.unfocused        #333333 #333333 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
 
 bar {
-    output primary
+    # output primary
     status_command i3blocks
     # tray_output none
     # verbose yes
