--- a/i3blocks/config
+++ b/i3blocks/config
@@ -24,7 +24,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/lib/i3blocks/$BLOCK_NAME
+command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
@@ -39,27 +39,27 @@ markup=none
 # interval=5
 # signal=12
 
-[player]
-command=~/.config/i3blocks/scripts/player
-instance=spotify
-interval=2
-signal=12
+# [player]
+# command=~/.config/i3blocks/scripts/player
+# instance=spotify
+# interval=2
+# signal=12
 
-[player]
-command=RUN_CMD="urxvt -e cmus" ~/.config/i3blocks/scripts/player
-instance=cmus
-interval=2
-signal=12
+# [player]
+# command=RUN_CMD="urxvt -e cmus" ~/.config/i3blocks/scripts/player
+# instance=cmus
+# interval=2
+# signal=12
 
-[disk]
-label=MEDIA
-instance=/media
-interval=30
+# [disk]
+# label=MEDIA
+# instance=/media
+# interval=30
 
-[disk]
-label=HOME
-instance=/home
-interval=30
+# [disk]
+# label=HOME
+# instance=/home
+# interval=30
 
 [disk]
 label=SYS
@@ -67,41 +67,30 @@ instance=/
 interval=30
 
 [iface]
-instance=enp0s20f0u6
+instance=enp2s0
 color=#00FF00
 interval=30
 separator=false
 
 [bandwidth]
-instance=enp0s20f0u6
+instance=enp2s0
 interval=5
 separator=true
 
-[iface]
-instance=eth0
-color=#00FF00
-interval=30
-separator=false
+# [iface]
+# instance=wlp4s0
+# color=#00FF00
+# interval=30
+# separator=false
 
-[bandwidth]
-instance=eth0
-interval=5
-separator=true
+# [wifi]
+# instance=wlp4s0
+# interval=10
+# separator=false
 
-[iface]
-instance=wlp4s0
-color=#00FF00
-interval=30
-separator=false
-
-[wifi]
-instance=wlp4s0
-interval=10
-separator=false
-
-[bandwidth]
-instance=wlp4s0
-interval=5
+# [bandwidth]
+# instance=wlp4s0
+# interval=5
 
 # [bandwidth]
 # instance=enp3s0
@@ -135,22 +124,22 @@ interval=10
 # command=onboard
 # # interval=once
 
-# Battery indicator
-#
-# The battery instance defaults to 0.
-[battery]
-label=BAT
-interval=30
+## Battery indicator
+##
+## The battery instance defaults to 0.
+#[battery]
+#label=BAT
+#interval=30
 
 
-# Battery indicator
-#
-# The battery instance defaults to 0.
-[brightness]
-label=BRI
-command=printf '%.0f%%' $(bc -l <<< "100 * $(brightnessctl g) / $(brightnessctl m)")
-interval=30
-signal=10
+## Battery indicator
+##
+## The battery instance defaults to 0.
+#[brightness]
+#label=BRI
+#command=printf '%.0f%%' $(bc -l <<< "100 * $(brightnessctl g) / $(brightnessctl m)")
+#interval=30
+#signal=10
 
 
 [time]
@@ -160,7 +149,7 @@ interval=persist
 
 [volume]
 label=VOL
-command=~/.config/i3blocks/scripts/volume
+# command=~/.config/i3blocks/scripts/volume
 interval=once
 signal=10
 separator_block_width=0
